<resources>
    <string name="app_name">My Anime Data</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_anime_list">Anime List</string>
    <string name="title_manga_list">Manga List</string>
    <string name="title_character_list">Character List</string>
    <string name="image_poster_desc">Image Poster</string>
    <string name="synopsis">Synopsis :</string>
    <string name="background">Background :</string>
    <string name="genre">Genre :</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="animes_title">Animes</string>
    <string name="mangas_title">Mangas</string>
    <string name="characters_title">Characters</string>
    <string name="menu_character">Character</string>
    <string name="menu_manga">Manga</string>
    <string name="menu_home">Home</string>
    <string name="most_popular_anime">Most Popular Anime</string>
    <string name="top_airing_anime">Top Airing Anime</string>
    <string name="upcoming_anime">Upcoming Anime</string>
    <string name="text_no_result">No Result, Try Again Later !!</string>
    <string name="most_popular_manga">Most Popular Manga</string>
    <string name="favorite_anime_character">Favorite Anime Character</string>
    <string name="tab_layout_character">Tab Layout Character</string>
    <string name="all_character">All Character</string>
    <string name="favorites_character">Favorites Character</string>
    <string name="all_anime_characters">All Anime Character</string>
    <string name="view_pager_character">View Pager Character</string>
    <string name="all_anime">All Anime</string>
    <string name="tab_layout_anime">Tab Layout Anime</string>
    <string name="view_pager_anime">View Pager Anime</string>
    <string name="all_manga">All Manga</string>
    <string name="tab_layout_manga">Tab Layout Manga</string>
    <string name="view_pager_manga">View Pager Manga</string>
    <string name="top_rated_manga">Top Rated Manga</string>
    <string name="top_rated_anime">Top Rated Anime</string>
    <string name="text_search_result">Search Result For :</string>
    <string name="input_query">Input Query</string>
    <string name="search_data">Search Data</string>
    <string name="input_search_query">Input Search Query</string>
    <string name="character">Character</string>
    <string name="manga">Manga</string>
    <string name="anime">Anime</string>
    <string name="search_data_by">Search Data By :</string>

    <string-array name="animeTypeList">
        <item>Not Selected</item>
        <item>TV</item>
        <item>Movie</item>
        <item>OVA</item>
        <item>Special</item>
        <item>ONA</item>
        <item>Music</item>
    </string-array>

    <string-array name="animeStatusList">
        <item>Not Selected</item>
        <item>Airing</item>
        <item>Complete</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="animeRatingList">
        <item>Not Selected</item>
        <item>G Rating (All Ages)</item>
        <item>PG Rating (Children)</item>
        <item>P13 Rating (Teens 13 or Older)</item>
        <item>R17 Rating (Violence And Profanity)</item>
        <item>R Rating (Mild Nudity)</item>
        <item>RX Rating (Hentai)</item>
    </string-array>

    <string-array name="orderList">
        <item>ID</item>
        <item>Title</item>
        <item>Start Date</item>
        <item>End Date</item>
        <item>Episodes</item>
        <item>Score</item>
        <item>Rank</item>
        <item>Popularity</item>
        <item>Favorites</item>
    </string-array>
    <string name="anime_type">Anime Type :</string>
    <string name="filter_data">Filter Data</string>
    <string name="select_anime_type">Select Anime Type</string>
    <string name="filter">Filter</string>
    <string name="anime_status">Anime Status :</string>
    <string name="select_anime_status">Select Anime Status</string>
    <string name="anime_rating">Anime Rating :</string>
    <string name="select_anime_rating">Select Anime Rating</string>
    <string name="order_by">Order By :</string>
    <string name="select_order_type">Select Order Type</string>
    <string name="sort_type">Sort Type :</string>
    <string name="select_sort_type">Select Sort Type</string>
    <string name="manga_status">Manga Status :</string>
    <string name="select_manga_status">Select Manga Status</string>
    <string name="select_manga_type">Select Manga Type</string>
    <string name="manga_type">Manga Type :</string>
    <string name="select_filter_type">Select Filter Type :</string>
    <string name="pictures">Pictures :</string>
    <string name="anime_recommendations">Anime Recommendations :</string>
    <string name="trailer_video">Trailer Video :</string>

    <string-array name="sortList">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>