<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        app:logo="@drawable/ic_back"
        app:title="@string/app_name"
        app:titleMarginStart="32dp"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:alpha="0.5">

        <ImageView
            android:id="@+id/imageBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:visibility="gone"/>
    </FrameLayout>

    <ScrollView
        android:id="@+id/detailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0.9"
            app:cardCornerRadius="5dp"
            style="@style/CardView.Dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imagePoster"
                        android:layout_width="135dp"
                        android:layout_height="192dp"
                        android:layout_marginHorizontal="10dp"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="5dp"
                        android:contentDescription="@string/image_poster_desc"/>

                    <LinearLayout
                        android:id="@+id/generalInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center_vertical"
                        android:weightSum="3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textName"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:gravity="start|center_vertical"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            style="@style/TextAppearance.Material3.BodyMedium"/>

                        <TextView
                            android:id="@+id/textScoreOrPopularity"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:gravity="start|center_vertical"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            style="@style/TextAppearance.Material3.BodyMedium"/>

                        <TextView
                            android:id="@+id/textTypeAndEpisodes"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:gravity="start|center_vertical"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            style="@style/TextAppearance.Material3.BodyMedium"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/titleSynopsisOrAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/synopsis"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <TextView
                    android:id="@+id/textSynopsisOrAbout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:alpha="0.8"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <TextView
                    android:id="@+id/titleBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/background"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <TextView
                    android:id="@+id/textBackground"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:alpha="0.8"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <TextView
                    android:id="@+id/textGenreOrDebutList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/genre"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvGenreOrDebutList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="horizontal"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/container_genre"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textPictureList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/pictures"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPictureList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="horizontal"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/container_pictures"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textRecommendationList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@string/anime_recommendations"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    style="@style/TextAppearance.Material3.LabelMedium"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecommendationList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="horizontal"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/container_recommendations"
                    android:visibility="gone"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </ScrollView>

    <TextView
        android:id="@+id/textNoDetailResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:text="@string/text_no_result"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/loadingDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@android:style/Widget.ProgressBar"/>

</RelativeLayout>